# jungian

./: .gitignore  .pylintrc  README.md  ROADMAP.md  mypy.ini  pyproject.toml
examples/: __init__.py  demo_mbti.py  demo_quest.py  lexical_usage.py  socio.py
src/jungian/: __init__.py  attitude.py  dichotomy.py  dimension.py  dtype.py  function.py  process.py  tg.py  trait.py  type.py
src/jungian/lexical/: guess.py  lexicon.json
src/jungian/models/: beebe.py  bigfive.py  grant.py  mbti.py
src/jungian/models/psys/: functrait.py
src/jungian/models/socionics/: ModelA.py  ModelJ.py  groups.py  gut.py  itr.py  reinin.py  sign.py
src/jungian/psys/: __init__.py  vector.py
src/jungian/questionnaires/: quest.py  quest_cli.py  quest_fhir.py
src/jungian/questionnaires/samples/: dichotomic.json  functional.json
src/jungian/systems/: mbti.py
src/jungian/systems/psys/: __init__.py  vector.py
src/jungian/systems/socionics/: ModelA.py  dimensionality.py  groups.py  itr.py  reinin.py  sign.py
tests/: test_guess.py  test_gut.py  test_itr.py  test_quest.py
